Fixed scrollbar and logo

--- a/src/less/dark.less
+++ b/src/less/dark.less
@@ -123,10 +123,12 @@ div#navbarSupportedContent li {
 }
 
 li.nav-item button.nav-link.active {
-    -webkit-box-shadow: 0px 2px 0px 0px rgba(248, 249, 248, 1) !important;
-    -moz-box-shadow:    0px 2px 0px 0px rgba(248, 249, 248, 1) !important;
-    box-shadow:         0px 2px 0px 0px rgba(248, 249, 248, 1) !important;
+    border-color: @app-white;
     background-color: @app-white;
+}
+
+li.nav-item button.nav-link:hover {
+    border-color: @app-white;
 }
 
 ul.nav.nav-tabs {
@@ -200,20 +202,17 @@ div#content-panel {
 
 .nav.nav-tabs {
     margin-top: 3px;
-    border-bottom-width: 3px;
+    border-bottom-width: 2px;
     border-bottom-color: @app-white;
 }
 
+ul.nav.nav-tabs {
+    -webkit-box-shadow: inset 0px -1px 0px 0px @app-white;
+    -moz-box-shadow:    inset 0px -1px 0px 0px @app-white;
+    box-shadow:         inset 0px -1px 0px 0px @app-white;
+}
+
 #date-panel {
-    .nav-tabs {
-        overflow-x: auto;
-        overflow-y: hidden;
-        flex-wrap: nowrap;
-        position: relative;
-
-        scrollbar-width: thin;
-    }
-
     .nav-tabs .nav-link {
         white-space: nowrap;
     }
